# xenon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
xenon/: CMakeLists.txt
xenon/assets/: brdf.frag  brdf.vert  env.frag  equirectangular.frag  framebuffer.frag  pbr.frag  pbr.vert
xenon/assets/shaders/: env.vert  framebuffer.vert  ibl.frag  ibl_cubemap.vert  pbr.frag  pbr.vert
xenon/src/: xenon.h
xenon/src/xenon/core/: application.cpp  application.h  assert.h  asset.cpp  asset.h  asset_manager.cpp  asset_manager.h  asset_serializer.cpp  asset_serializer.h  debug.cpp  debug.h  filesystem.cpp  filesystem.h  input.cpp  input.h  log.h  time.h  uuid.cpp  uuid.h
xenon/src/xenon/graphics/: animation.cpp  animation.h  brdf.cpp  brdf.h  camera.cpp  camera.h  environment.h  framebuffer.cpp  framebuffer.h  ibl_loader.cpp  ibl_loader.h  light.h  material.h  model.cpp  model.h  model_loader.cpp  model_loader.h  primitive.cpp  primitive.h  primitives.cpp  primitives.h  renderer.cpp  renderer.h  shader.cpp  shader.h  skin.h  texture.cpp  texture.h
xenon/src/xenon/scene/: scene.cpp  scene.h
xenon/src/xenon/scripting/: script.cpp  script.h
xenon_csharp/src/: Component.cs  Entity.cs  Matrix.cs  Transform.cs  Vector3.cs
xenon_csharp/test/src/: Test.cs
xenon_editor/: CMakeLists.txt
xenon_editor/assets/shaders/: grid.frag  grid.vert  static.frag  static.vert
xenon_editor/src/: main.cpp  orbit_camera.cpp  orbit_camera.h  ui_elements.cpp
xenon_editor/src/ui/: asset_viewer.cpp  asset_viewer.h  editor.cpp  editor.h  imgui_components.cpp  imgui_components.h  imgui_operators.h  inspector.cpp  inspector.h  model_inspector.cpp  model_inspector.h  scene_hierarchy.cpp  scene_hierarchy.h  theme.cpp  theme.h
